--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Portfolio | Ali Sinan Ozturk"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Ali Sinan Ozturk"
-description              : "Industrial Designer"
+description              : "Portfolio of Ali Sinan Ozturk, Industrial Designer, Animator, Visualization Expert"
 url                      : "https://www.alisinanozturk.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "alisinan/alisinan.github.io"
